// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormSupport add a new field to column to the pages 1`] = `
Array [
  Object {
    "description": "Add a short description for this page.",
    "localizedDescription": Object {
      "en_US": "Add a short description for this page.",
    },
    "localizedTitle": Object {
      "en_US": "Page title",
    },
    "rows": Array [
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "radio",
                "instanceId": "123njndk1",
                "label": "Radio Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "settingsContext": Object {
                  "pages": Array [
                    Object {
                      "rows": Array [
                        Object {
                          "columns": Array [
                            Object {
                              "fields": Array [
                                Object {
                                  "fieldName": "label",
                                  "localizable": true,
                                  "settingsContext": Object {
                                    "pages": Array [
                                      Object {
                                        "rows": Array [
                                          Object {
                                            "columns": Array [],
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                },
                                Object {
                                  "fieldName": "name",
                                },
                                Object {
                                  "fieldName": "required",
                                },
                                Object {
                                  "fieldName": "type",
                                },
                              ],
                              "size": 12,
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                "type": "radio",
              },
            ],
            "size": 3,
          },
          Object {
            "fields": Array [
              Object {
                "spritemap": "icons.svg",
                "type": "text",
              },
            ],
            "size": 9,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "text1",
                "instanceId": "1fnjndk1",
                "label": "Text Field 1",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
              Object {
                "fieldName": "text2",
                "instanceId": "193jndk1",
                "label": "Text Field 2",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
            ],
            "size": 4,
          },
          Object {
            "fields": Array [
              Object {
                "fieldName": "select",
                "instanceId": "1fnjfqk1",
                "label": "Select Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "select",
              },
            ],
            "size": 6,
          },
          Object {
            "fields": Array [],
            "size": 2,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "date",
                "instanceId": "1ffqwjndk1",
                "label": "Date Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "date",
              },
            ],
            "size": 12,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "numeric",
                "instanceId": "1ljqjndk1",
                "label": "Numeric Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "numeric",
              },
            ],
            "size": 12,
          },
        ],
      },
    ],
    "title": "Page title",
  },
]
`;

exports[`FormSupport add a new row to the pages and reorder 1`] = `
Array [
  Object {
    "description": "Add a short description for this page.",
    "localizedDescription": Object {
      "en_US": "Add a short description for this page.",
    },
    "localizedTitle": Object {
      "en_US": "Page title",
    },
    "rows": Array [
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "type": "newRow",
              },
            ],
            "size": 12,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "radio",
                "instanceId": "123njndk1",
                "label": "Radio Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "settingsContext": Object {
                  "pages": Array [
                    Object {
                      "rows": Array [
                        Object {
                          "columns": Array [
                            Object {
                              "fields": Array [
                                Object {
                                  "fieldName": "label",
                                  "localizable": true,
                                  "settingsContext": Object {
                                    "pages": Array [
                                      Object {
                                        "rows": Array [
                                          Object {
                                            "columns": Array [],
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                },
                                Object {
                                  "fieldName": "name",
                                },
                                Object {
                                  "fieldName": "required",
                                },
                                Object {
                                  "fieldName": "type",
                                },
                              ],
                              "size": 12,
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                "type": "radio",
              },
            ],
            "size": 3,
          },
          Object {
            "fields": Array [],
            "size": 9,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "text1",
                "instanceId": "1fnjndk1",
                "label": "Text Field 1",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
              Object {
                "fieldName": "text2",
                "instanceId": "193jndk1",
                "label": "Text Field 2",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
            ],
            "size": 4,
          },
          Object {
            "fields": Array [
              Object {
                "fieldName": "select",
                "instanceId": "1fnjfqk1",
                "label": "Select Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "select",
              },
            ],
            "size": 6,
          },
          Object {
            "fields": Array [],
            "size": 2,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "date",
                "instanceId": "1ffqwjndk1",
                "label": "Date Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "date",
              },
            ],
            "size": 12,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "numeric",
                "instanceId": "1ljqjndk1",
                "label": "Numeric Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "numeric",
              },
            ],
            "size": 12,
          },
        ],
      },
    ],
    "title": "Page title",
  },
]
`;

exports[`FormSupport adds a new fields to column void 1`] = `
Array [
  Object {
    "description": "Add a short description for this page.",
    "localizedDescription": Object {
      "en_US": "Add a short description for this page.",
    },
    "localizedTitle": Object {
      "en_US": "Page title",
    },
    "rows": Array [
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "radio",
                "instanceId": "123njndk1",
                "label": "Radio Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "settingsContext": Object {
                  "pages": Array [
                    Object {
                      "rows": Array [
                        Object {
                          "columns": Array [
                            Object {
                              "fields": Array [
                                Object {
                                  "fieldName": "label",
                                  "localizable": true,
                                  "settingsContext": Object {
                                    "pages": Array [
                                      Object {
                                        "rows": Array [
                                          Object {
                                            "columns": Array [],
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                },
                                Object {
                                  "fieldName": "name",
                                },
                                Object {
                                  "fieldName": "required",
                                },
                                Object {
                                  "fieldName": "type",
                                },
                              ],
                              "size": 12,
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                "type": "radio",
              },
            ],
            "size": 3,
          },
          Object {
            "fields": Array [],
            "size": 9,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "text1",
                "instanceId": "1fnjndk1",
                "label": "Text Field 1",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
              Object {
                "fieldName": "text2",
                "instanceId": "193jndk1",
                "label": "Text Field 2",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
            ],
            "size": 4,
          },
          Object {
            "fields": Array [
              Object {
                "fieldName": "select",
                "instanceId": "1fnjfqk1",
                "label": "Select Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "select",
              },
            ],
            "size": 6,
          },
          Object {
            "fields": Array [
              Object {
                "spritemap": "icons.svg",
                "type": "text",
              },
            ],
            "size": 2,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "date",
                "instanceId": "1ffqwjndk1",
                "label": "Date Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "date",
              },
            ],
            "size": 12,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "numeric",
                "instanceId": "1ljqjndk1",
                "label": "Numeric Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "numeric",
              },
            ],
            "size": 12,
          },
        ],
      },
    ],
    "title": "Page title",
  },
]
`;

exports[`FormSupport gets a column from pages 1`] = `
Object {
  "fields": Array [
    Object {
      "fieldName": "select",
      "instanceId": "1fnjfqk1",
      "label": "Select Field",
      "options": Array [
        Object {
          "label": "Option 1",
          "value": "option1",
        },
        Object {
          "label": "Option 2",
          "value": "option2",
        },
      ],
      "required": true,
      "settingsContext": Object {
        "pages": Array [],
      },
      "type": "select",
    },
  ],
  "size": 6,
}
`;

exports[`FormSupport gets a row from pages 1`] = `
Object {
  "columns": Array [
    Object {
      "fields": Array [
        Object {
          "fieldName": "text1",
          "instanceId": "1fnjndk1",
          "label": "Text Field 1",
          "required": true,
          "settingsContext": Object {
            "pages": Array [],
          },
          "type": "text",
        },
        Object {
          "fieldName": "text2",
          "instanceId": "193jndk1",
          "label": "Text Field 2",
          "required": true,
          "settingsContext": Object {
            "pages": Array [],
          },
          "type": "text",
        },
      ],
      "size": 4,
    },
    Object {
      "fields": Array [
        Object {
          "fieldName": "select",
          "instanceId": "1fnjfqk1",
          "label": "Select Field",
          "options": Array [
            Object {
              "label": "Option 1",
              "value": "option1",
            },
            Object {
              "label": "Option 2",
              "value": "option2",
            },
          ],
          "required": true,
          "settingsContext": Object {
            "pages": Array [],
          },
          "type": "select",
        },
      ],
      "size": 6,
    },
    Object {
      "fields": Array [],
      "size": 2,
    },
  ],
}
`;

exports[`FormSupport gets a specific field through the pages 1`] = `
Object {
  "fieldName": "radio",
  "instanceId": "123njndk1",
  "label": "Radio Field",
  "options": Array [
    Object {
      "label": "Option 1",
      "value": "option1",
    },
    Object {
      "label": "Option 2",
      "value": "option2",
    },
  ],
  "settingsContext": Object {
    "pages": Array [
      Object {
        "rows": Array [
          Object {
            "columns": Array [
              Object {
                "fields": Array [
                  Object {
                    "fieldName": "label",
                    "localizable": true,
                    "settingsContext": Object {
                      "pages": Array [
                        Object {
                          "rows": Array [
                            Object {
                              "columns": Array [],
                            },
                          ],
                        },
                      ],
                    },
                  },
                  Object {
                    "fieldName": "name",
                  },
                  Object {
                    "fieldName": "required",
                  },
                  Object {
                    "fieldName": "type",
                  },
                ],
                "size": 12,
              },
            ],
          },
        ],
      },
    ],
  },
  "type": "radio",
}
`;

exports[`FormSupport removes a column from pages and reorder 1`] = `
Array [
  Object {
    "description": "Add a short description for this page.",
    "localizedDescription": Object {
      "en_US": "Add a short description for this page.",
    },
    "localizedTitle": Object {
      "en_US": "Page title",
    },
    "rows": Array [
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "radio",
                "instanceId": "123njndk1",
                "label": "Radio Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "settingsContext": Object {
                  "pages": Array [
                    Object {
                      "rows": Array [
                        Object {
                          "columns": Array [
                            Object {
                              "fields": Array [
                                Object {
                                  "fieldName": "label",
                                  "localizable": true,
                                  "settingsContext": Object {
                                    "pages": Array [
                                      Object {
                                        "rows": Array [
                                          Object {
                                            "columns": Array [],
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                },
                                Object {
                                  "fieldName": "name",
                                },
                                Object {
                                  "fieldName": "required",
                                },
                                Object {
                                  "fieldName": "type",
                                },
                              ],
                              "size": 12,
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                "type": "radio",
              },
            ],
            "size": 3,
          },
          Object {
            "fields": Array [],
            "size": 9,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "text1",
                "instanceId": "1fnjndk1",
                "label": "Text Field 1",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
              Object {
                "fieldName": "text2",
                "instanceId": "193jndk1",
                "label": "Text Field 2",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
            ],
            "size": 4,
          },
          Object {
            "fields": Array [],
            "size": 2,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "date",
                "instanceId": "1ffqwjndk1",
                "label": "Date Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "date",
              },
            ],
            "size": 12,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "numeric",
                "instanceId": "1ljqjndk1",
                "label": "Numeric Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "numeric",
              },
            ],
            "size": 12,
          },
        ],
      },
    ],
    "title": "Page title",
  },
]
`;

exports[`FormSupport removes a fields to column from pages 1`] = `
Array [
  Object {
    "description": "Add a short description for this page.",
    "localizedDescription": Object {
      "en_US": "Add a short description for this page.",
    },
    "localizedTitle": Object {
      "en_US": "Page title",
    },
    "rows": Array [
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "radio",
                "instanceId": "123njndk1",
                "label": "Radio Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "settingsContext": Object {
                  "pages": Array [
                    Object {
                      "rows": Array [
                        Object {
                          "columns": Array [
                            Object {
                              "fields": Array [
                                Object {
                                  "fieldName": "label",
                                  "localizable": true,
                                  "settingsContext": Object {
                                    "pages": Array [
                                      Object {
                                        "rows": Array [
                                          Object {
                                            "columns": Array [],
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                },
                                Object {
                                  "fieldName": "name",
                                },
                                Object {
                                  "fieldName": "required",
                                },
                                Object {
                                  "fieldName": "type",
                                },
                              ],
                              "size": 12,
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                "type": "radio",
              },
            ],
            "size": 3,
          },
          Object {
            "fields": Array [],
            "size": 9,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "text1",
                "instanceId": "1fnjndk1",
                "label": "Text Field 1",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
              Object {
                "fieldName": "text2",
                "instanceId": "193jndk1",
                "label": "Text Field 2",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
            ],
            "size": 4,
          },
          Object {
            "fields": Array [],
            "size": 6,
          },
          Object {
            "fields": Array [],
            "size": 2,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "date",
                "instanceId": "1ffqwjndk1",
                "label": "Date Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "date",
              },
            ],
            "size": 12,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "numeric",
                "instanceId": "1ljqjndk1",
                "label": "Numeric Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "numeric",
              },
            ],
            "size": 12,
          },
        ],
      },
    ],
    "title": "Page title",
  },
]
`;

exports[`FormSupport removes a row from pages and reorder 1`] = `
Array [
  Object {
    "description": "Add a short description for this page.",
    "localizedDescription": Object {
      "en_US": "Add a short description for this page.",
    },
    "localizedTitle": Object {
      "en_US": "Page title",
    },
    "rows": Array [
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "radio",
                "instanceId": "123njndk1",
                "label": "Radio Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "settingsContext": Object {
                  "pages": Array [
                    Object {
                      "rows": Array [
                        Object {
                          "columns": Array [
                            Object {
                              "fields": Array [
                                Object {
                                  "fieldName": "label",
                                  "localizable": true,
                                  "settingsContext": Object {
                                    "pages": Array [
                                      Object {
                                        "rows": Array [
                                          Object {
                                            "columns": Array [],
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                },
                                Object {
                                  "fieldName": "name",
                                },
                                Object {
                                  "fieldName": "required",
                                },
                                Object {
                                  "fieldName": "type",
                                },
                              ],
                              "size": 12,
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                "type": "radio",
              },
            ],
            "size": 3,
          },
          Object {
            "fields": Array [],
            "size": 9,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "date",
                "instanceId": "1ffqwjndk1",
                "label": "Date Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "date",
              },
            ],
            "size": 12,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "numeric",
                "instanceId": "1ljqjndk1",
                "label": "Numeric Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "numeric",
              },
            ],
            "size": 12,
          },
        ],
      },
    ],
    "title": "Page title",
  },
]
`;

exports[`FormSupport updates a field 1`] = `
Array [
  Object {
    "description": "Add a short description for this page.",
    "localizedDescription": Object {
      "en_US": "Add a short description for this page.",
    },
    "localizedTitle": Object {
      "en_US": "Page title",
    },
    "rows": Array [
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "radio",
                "instanceId": "123njndk1",
                "label": "Radio Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "settingsContext": Object {
                  "pages": Array [
                    Object {
                      "rows": Array [
                        Object {
                          "columns": Array [
                            Object {
                              "fields": Array [
                                Object {
                                  "fieldName": "label",
                                  "localizable": true,
                                  "settingsContext": Object {
                                    "pages": Array [
                                      Object {
                                        "rows": Array [
                                          Object {
                                            "columns": Array [],
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                },
                                Object {
                                  "fieldName": "name",
                                },
                                Object {
                                  "fieldName": "required",
                                },
                                Object {
                                  "fieldName": "type",
                                },
                              ],
                              "size": 12,
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                "type": "radio",
              },
            ],
            "size": 3,
          },
          Object {
            "fields": Array [],
            "size": 9,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "text1",
                "instanceId": "1fnjndk1",
                "label": "Text Field 1",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
              Object {
                "fieldName": "text2",
                "instanceId": "193jndk1",
                "label": "Text Field 2",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
            ],
            "size": 4,
          },
          Object {
            "fields": Array [
              Object {
                "fieldName": "select",
                "instanceId": "1fnjfqk1",
                "label": "Select Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "select",
              },
            ],
            "size": 6,
          },
          Object {
            "fields": Array [],
            "size": 2,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "date",
                "instanceId": "1ffqwjndk1",
                "label": "Date Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "date",
              },
            ],
            "size": 12,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "numeric",
                "instanceId": "1ljqjndk1",
                "label": "Numeric Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "numeric",
              },
            ],
            "size": 12,
          },
        ],
      },
    ],
    "title": "Page title",
  },
]
`;
